Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116441

qdoc: Pages with multiple \ingroup commands lose navigation to parent \group

    XMLWordPrintable

Details

    • 2b2ac8e4a (dev), b55315b9f (6.6), d2676de6b (6.5)
    • DaVinci 86

    Description

      QDoc adds a link to the parent \group in the navigation links (breadcrumbs) for a page that uses the \ingroup command. However, this step is omitted if there are multiple \ingroup commands in use - even if the extra \ingroup commands are used only for grouping with \generatelist, and do not reference an existing \group page.

      As there might still be only a single valid link target (a named \group page with a \title), this logic should be revised to handle that.

      Attachments

        For Gerrit Dashboard: QTBUG-116441
        # Subject Branch Project Status CR V

        Activity

          People

            treinio Topi Reiniö
            treinio Topi Reiniö
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes