tests/auto/qdoc/generatedoutput/testdata/headerfile/testheader.cpp
@@ -9,11 +9,16 @@
     \inmodule TestCPP
     \brief A header file.
     \ingroup headers
+    \ingroup tests
 */
 
 /*!
     \group headers
     \title Headers
+*/
+
+/*! \group tests
+    \title Tests
 */
 
 /*!
